cleaned up spacing issues in code

--- a/assets/style.css
+++ b/assets/style.css
@@ -12,6 +12,7 @@ body,
   margin: 0;
   padding: 0;
 }
+
 /* sets font and background color */
 body {
   font-family: sans-serif;
@@ -23,6 +24,7 @@ body {
   padding-left: 20px;
   padding-right: 20px;
 }
+
 /* formats the header section */
 header {
   text-align: center;
@@ -30,6 +32,7 @@ header {
   padding-top: 0px;
   color: hsl(206, 17%, 28%);
 }
+
 /* formats the card class */
 .card {
   background-color: hsl(0, 0%, 100%);
@@ -72,13 +75,13 @@ header {
   display: block;
   clear: both;
 }
+
 /* formats the btn class */
 .btn {
   border: none;
   background-color: hsl(360, 91%, 36%);
   border-radius: 25px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
-    0px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px 0px;
   color: hsl(0, 0%, 100%);
   display: inline-block;
   font-size: 22px;
@@ -98,6 +101,7 @@ button[disabled] {
 .float-right {
   float: right;
 }
+
 /* adds border and padding and other attributes  to the password id */
 #password {
   -webkit-appearance: none;
@@ -132,10 +136,10 @@ button[disabled] {
     font-size: 1rem;
   }
 }
+
 /* adds  responsivness to page */
 @media (max-width: 500px) {
   .btn {
     font-size: 0.8rem;
   }
 }
-
